Add new dashboard, landing, legal pages, and Vercel routing

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_SUPABASE_URL=https://fbqidnsnhhjaabynxdjd.supabase.co
 VITE_SUPABASE_ANON_KEY=sb_publishable_UkpDxfXAR8Vdxe7yShLZtw_MPCoU00h
+VITE_SUPABASE_FUNCTION_URL=https://fbqidnsnhhjaabynxdjd.functions.supabase.co
