Fix Vercel SPA rewrite for /secure routes

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/secure/:path*",
-      "destination": "/"
+      "destination": "/index.html"
     }
   ]
 }
